--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 
-    <title>SafeSurf by abhizaik</title>
+    <title>proteck by FormSave</title>
     <meta name="description" content="SafeSurf is a phishing domain detection tool created by abhizaik. This allows you to safely view the website without visiting it.">
     <meta name="og:title" property="og:title" content="SafeSurf by abhizaik">
     <meta name="keywords" content="SafeSurf, phishing, abhizaik">
@@ -27,7 +27,7 @@
     {% block content %}{% endblock %} {% if '/preview' not in request.path %}
     <div class="app-footer">
         <a href="https://github.com/abhizaik/SafeSurf" target="_blank" rel="noopener"><strong>GitHub</strong></a>
-        <span> &nbsp;👀&nbsp; </span> Created by&nbsp;
+        <span> &nbsp;🔒&nbsp; </span> Created by&nbsp;
         <a href="https://abhishekkp.com/" target="_blank" rel="noopener"> <strong>abhizaik</strong></a>
     </div>
     {% endif %}
